# ctxguard

./: .ctxguard.toml.example  .gitignore  LICENSE  README.md  SECURITY.md  plugin.json  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  publish.yml
ctxguard/: __init__.py  __main__.py  cli.py  detectors.py  hooks.py
docs/: demo.md
docs/launch/: anthropic-plugin-submission.md  awesome-claude-code.md  reddit.md  show-hn.md
docs/releases/: v0.1.0.md
hooks/: hooks.json
scripts/: demo.py  detectors.py  pretooluse_guard.py  session_start_scan.py
tests/: conftest.py  test_cli.py  test_detectors.py  test_distribution.py  test_hooks.py
tests/fixtures/clean/: clean.py  docs.md  placeholders.env
tests/fixtures/secrets/: aws.txt  cloud.txt  credentials.json  dburls.txt  dummy.pem  gcp_sa.json  github.txt  id_rsa  jwt.txt  keys.txt  saas.txt  settings.py  slack.txt  stripe.txt
tests/fixtures/secrets/dotenv/: .env
