[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ctxguard"
version = "0.1.0"
description = "Blocks secrets, credentials, and sensitive files from ever entering an AI coding agent's context window."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Ismail Rhoulam" }]
requires-python = ">=3.9"
keywords = ["claude-code", "security", "secrets", "hooks", "ai-agents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]
dependencies = [
    "rich>=13.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
ctxguard = "ctxguard.cli:main"

[project.urls]
Homepage = "https://github.com/irhoulam/ctxguard"

[tool.setuptools]
packages = ["ctxguard"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
