[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "ctxguard"
version = "0.1.0"
description = "Blocks secrets, credentials, and sensitive files from ever entering an AI coding agent's context window."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Ismail Rhoulam", email = "rhoulam.backup@gmail.com" }]
requires-python = ">=3.9"
keywords = ["claude-code", "security", "secrets", "hooks", "ai-agents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]
dependencies = [
    "rich>=13.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = ["build>=1.2", "pytest>=8.0", "twine>=5.0"]

[project.scripts]
ctxguard = "ctxguard.cli:main"

[project.urls]
Homepage = "https://github.com/Ismail-Rhoulam/ctxguard"
Repository = "https://github.com/Ismail-Rhoulam/ctxguard"
Issues = "https://github.com/Ismail-Rhoulam/ctxguard/issues"
Documentation = "https://github.com/Ismail-Rhoulam/ctxguard#readme"

[tool.setuptools]
packages = ["ctxguard"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
